<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="image_story">image story</string>
    <string name="add_story">Tambah Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="detail_story">Detail Story\n</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="imagepreview" translatable="false">previewImage</string>
    <string name="imagestory" translatable="false">ImageStory</string>
    <string name="desc_empty_warning" translatable="false">please insert description</string>
    <string name="path_learning" translatable="false">Path Learning</string>
    <string name="maps" translatable="false">Maps</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="retry">Coba Lagi</string>
    <string name="hero_login" translatable="false">hero login</string>
    <string name="insert_my_gps_for_this_story">Masukan GPS atau Lokasi saya untuk story ini ?</string>
</resources>